2019-1/220/users/3426/executions/1648_87.log
== TEST (2019-04-08 20:33:20) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
	else:
		if((n2 < n1) and (n2 < n3)):
			print(n2)
			else:
				print(n3)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:47) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
		if((n2 < n1) and (n2 < n3)):
			print(n2)
			else:
				print(n3)
-- ERROR:
File "XXXX", line 7
    if((n2 < n1) and (n2 < n3)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:34:20) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
else:
	if((n2 < n1) and (n2 < n3)):
	print(n2)
	else:
	print(n3)
-- ERROR:
File "XXXX", line 9
    print(n2)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:34:36) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
else:
	if((n2 < n1) and (n2 < n3)):
		print(n2)
	else:
		print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:34:47) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
else:
	if((n2 < n1) and (n2 < n3)):
		print(n2)
	else:
		print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:35:02) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
else:
	if((n2 < n1) and (n2 < n3)):
		print(n2)
	else:
		print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:35:12) 
-- CODE:
n1 = int(input("n1: "))
n2 = int(input("n2: "))
n3 = int(input("n3: "))

if((n1 < n2) and (n1 < n3)):
	print(n1)
else:
	if((n2 < n1) and (n2 < n3)):
		print(n2)
	else:
		print(n3)
-- EXECUTION TIME:
0.134921
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
